--- a/bank.html
+++ b/bank.html
@@ -384,6 +384,8 @@
     <header>
         <h1>Computer Architecture Practice Quiz</h1>
         <p>د. منال العريقي - معمارية الحاسوب</p>
+        <p>تم بواسطة المهندس: عبدالملك حسان الحاج</p>
+        <p>علوم الحاسوب - مستوى ثاني</p>
         <div class="language-switcher">
             <button class="lang-btn active" onclick="switchLanguage('both')">العربية والإنجليزية</button>
             <button class="lang-btn" onclick="switchLanguage('arabic')">العربية فقط</button>
