--- a/aalhaj.html
+++ b/aalhaj.html
@@ -812,7 +812,9 @@ button, select {
                     <i class="fas fa-laptop-code"></i>
                     <div>
                         <h1>بنك أسئلة معمارية الحاسوب</h1>
-                        <p>نماذج اختبار نصفي - د. منال العريقي - CS24</p>
+                        <p>نماذج اختبار نصفي - د. منال العريقي - CS25</p>
+                        <p>تم بواسطة المهندس: عبدالملك حسان الحاج</p>
+                        <p>علوم الحاسوب - مستوى ثاني</p>
                     </div>
                 </div>
                 <div class="controls">
@@ -923,7 +925,7 @@ button, select {
             <div class="footer-content">
                 <i class="fas fa-graduation-cap fa-2x"></i>
                 <p id="footerText">بنك أسئلة لمادة معمارية الحاسوب - تم إنشاؤه بناءً على ملفات الدورة التدريبية لد. منال العريقي</p>
-                <p id="copyrightText">جميع الحقوق محفوظة &copy; <span id="currentYear"></span></p>
+                <p id="copyrightText">جميع الحقوق محفوظة للمهندس عبدالملك حسان الحاج &copy; <span id="currentYear"></span></p>
             </div>
         </div>
     </footer>
@@ -1669,7 +1671,7 @@ button, select {
                     toggleCorrectionsText: showAllCorrections ? 'إخفاء جميع التصحيحات' : 'عرض جميع التصحيحات',
                     toggleReferencesText: showAllReferences ? 'إخفاء جميع المراجع' : 'عرض جميع المراجع',
                     footerText: 'بنك أسئلة لمادة معمارية الحاسوب - تم إنشاؤه بناءً على ملفات الدورة التدريبية لد. منال العريقي',
-                    copyrightText: 'جميع الحقوق محفوظة ©'
+                    copyrightText: 'جميع الحقوق محفوظة للمهندس عبدالملك حسان الحاج ©'
                 },
                 en: {
                     filterTitle: 'Filter Questions',
