--- a/aalhaj.html
+++ b/aalhaj.html
@@ -924,7 +924,7 @@ button, select {
         <div class="container">
             <div class="footer-content">
                 <i class="fas fa-graduation-cap fa-2x"></i>
-                <p id="footerText">بنك أسئلة لمادة معمارية الحاسوب - تم إنشاؤه بناءً على ملفات الدورة التدريبية لد. منال العريقي</p>
+                <p id="footerText">بنك أسئلة لمادة معمارية الحاسوب - تم إنشاؤه بناءً على الشبترات من CH1 الى CH5 لـ د. منال العريقي</p>
                 <p id="copyrightText">جميع الحقوق محفوظة للمهندس عبدالملك حسان الحاج &copy; <span id="currentYear"></span></p>
             </div>
         </div>
@@ -1670,7 +1670,7 @@ button, select {
                     correctionQuestionsLabel: 'أسئلة تحتوي على تصحيح',
                     toggleCorrectionsText: showAllCorrections ? 'إخفاء جميع التصحيحات' : 'عرض جميع التصحيحات',
                     toggleReferencesText: showAllReferences ? 'إخفاء جميع المراجع' : 'عرض جميع المراجع',
-                    footerText: 'بنك أسئلة لمادة معمارية الحاسوب - تم إنشاؤه بناءً على ملفات الدورة التدريبية لد. منال العريقي',
+                    footerText: 'بنك أسئلة لمادة معمارية الحاسوب - تم إنشاؤه بناءً على الشبترات من CH1 الى CH5 ',
                     copyrightText: 'جميع الحقوق محفوظة للمهندس عبدالملك حسان الحاج ©'
                 },
                 en: {
@@ -1733,4 +1733,5 @@ button, select {
         }
     </script>
 </body>
+
 </html>
